# scord

./: .gitignore  CRUSH.md  README.md  TEST-DATASETS.md  gaming-laptops-dataset.json  index.html  openttd-trains-dataset.json  simple-test-dataset.json  stress-test-dataset.json  tailwind.config.js
bevyapp/: Cargo.toml  README.md  todo.md
bevyapp/src/: data.rs  import_export.rs  main.rs  scoring.rs  ui.rs
convex/: contestants.ts
scord-desktop/: BUGFIXES.md  Cargo.toml  FONT-AND-ARROWS-FIX.md  FONT-BASELINE-FIX.md  README.md  UI-FIXES.md  dashboard-description.json  website-analyzer.md
scord-desktop/src/: app.rs  main.rs
scord-desktop/src/models/: contestant.rs  mod.rs  property.rs  scoring.rs  tab.rs  visual_config.rs
scord-desktop/src/persistence/: mod.rs  storage.rs
scord-desktop/src/ui/: controls.rs  mod.rs  results.rs  spreadsheet.rs  tabs.rs  theme.rs  visual_settings.rs
scord-desktop/src/utils/: export.rs
src/: App.tsx  SpreadsheetView.tsx  index.css
src/assets/glass icons/icons/: app-stack.tsx  arrows-bold-opposite-direction.tsx  award.tsx  bolt.tsx  bug.tsx  camera.tsx  cart.tsx  circle-arrow-down.tsx  circle-chart-line.tsx  circle-copy-plus.tsx  clipboard-check.tsx  clipboard.tsx  cloud-bolt.tsx  cloud-download.tsx  cloud-upload.tsx  code-editor.tsx  color-palette.tsx  connect.tsx  duplicate-plus.tsx  duplicate.tsx  eye.tsx  feather.tsx  folder.tsx  folders.tsx  gear.tsx  (+29 more)
webapp/: package.json  todo.md  vite.config.ts
webapp/convex/: schema.ts
webapp/convex/_generated/: api.d.ts
webapp/src/: App.tsx  SpreadsheetView.tsx  index.css
(+47 files in other folders)
