[package]
name = "scord-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_egui = "0.28"
egui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rfd = "0.15"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }

[features]
default = ["bevy/default"]